# estudos_cv

./: CLAUDE.md  README.md
.claude/: settings.local.json
.ipynb_checkpoints/: README-checkpoint.md
cv_lib/: __init__.py  processamento.py
cv_lib/.ipynb_checkpoints/: processamento-checkpoint.py
cv_lib/espacos_cor/: __init__.py  hsv.py  lab.py  rgb.py  ycbcr.py
cv_lib/operacoes_pontuais/: __init__.py  aritmetica.py  brilho_contraste.py  gama.py  normalizacao.py
cv_lib/utils/: __init__.py  validacao.py
cv_reference_mcp/: README.md  pyproject.toml  requirements.txt  requirements_py39.txt
cv_reference_mcp/data/pdfs/: .gitkeep
cv_reference_mcp/scripts/: setup_vectors.py  test_server.py
cv_reference_mcp/src/: __init__.py  config.py  pdf_processor.py  query_handler.py  server.py  vector_store.py
notebooks/: 01-Fundamentos_Processamento_Imagens.ipynb
notebooks/.ipynb_checkpoints/: 01-Fundamentos_Processamento_Imagens-checkpoint.ipynb
notebooks/01 - Fundamentos de Processamento de Imagens/: 01-Conceitos_Basicos_Imagem_Digital.ipynb  03-Operacoes_Pontuais.ipynb
tests/: README.md
tests/01_fundamentos/: teste_importacao.py
tests/01_fundamentos/conversoes_cinza/: exemplo_hsv_detalhado.py  exemplo_lab_detalhado.py  teste_completo_conversoes.py  teste_conversoes_cinza.py
tests/01_fundamentos/operacoes_pontuais/: teste_completo_operacoes_pontuais.py
utils/: __init__.py  datasets.py  visualization.py
