[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cv-reference-mcp"
version = "0.1.0"
description = "MCP Server para consulta semântica de referências bibliográficas de Visão Computacional"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Estudos CV", email = "estudos@cv.local"}
]
keywords = ["mcp", "computer-vision", "rag", "pdf", "references"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "sentence-transformers>=2.6.0",
    "faiss-cpu>=1.8.0",
    "PyMuPDF>=1.24.0",
    "pydantic>=2.6.0",
    "numpy>=1.24.0",
    "typing-extensions>=4.9.0",
    "pathlib>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/estudos-cv/cv-reference-mcp"
Repository = "https://github.com/estudos-cv/cv-reference-mcp"
Documentation = "https://github.com/estudos-cv/cv-reference-mcp/blob/main/README.md"

[project.scripts]
cv-reference-mcp = "src.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true